# ELINA

./: meson.build  meson_options.txt
elina_auxiliary/: elina_config.h  elina_interval.c  elina_interval.h  elina_lincons0.c  elina_lincons0.h  elina_linexpr0.c  elina_linexpr0.h  elina_scalar.c  elina_scalar.h  meson.build
elina_linearize/: elina_scalar_arith.c  meson.build
elina_oct/: meson.build  opt_oct_internal.h  opt_oct_representation.c
elina_poly/: opt_pk_config.h
partitions_api/: meson.build
